--- a/.factory/aws/cluster/tasks/ec2/vpc.yml
+++ b/.factory/aws/cluster/tasks/ec2/vpc.yml
@@ -8,7 +8,7 @@
 
     - ec2_vpc_net:
         name: "{{ ec2_name_prefix }}-vpc"
-        cidr_block: 10.10.0.0/16
+        cidr_block: "{{ ec2_vpc_cidr }}"
         tags:
           family: "{{ ec2_name_prefix }}"
         tenancy: default
