--- a/.factory/aws/cluster/tasks/ecs/service.yml
+++ b/.factory/aws/cluster/tasks/ecs/service.yml
@@ -6,25 +6,29 @@
 #
 ########################################################################################################################
 
+    - debug: msg="{{ subnets.results[0].subnet.availability_zone }}"
+
     - name: create service
       ecs_service:
         state: present
         delay: "{{ ecs_delay }}"
         repeat: "{{ ecs_repeat }}"
-        name: "{{ ec2_name_prefix }}-service"
+        name: "{{ ec2_name_prefix }}-service-{{ item.name }}"
         cluster: "{{ ec2_name_prefix }}-cluster"
         task_definition: "{{ ec2_name_prefix }}-taskdefinition:1"
-        desired_count: "{{ ec2_vpc_subnets|length }}"
+        desired_count: "1"
         network_configuration:
           assign_public_ip: "{{ ecs_public_ip }}"
           subnets:
-            - "{{ subnets.results[0].subnet.id }}"
-            - "{{ subnets.results[1].subnet.id }}"
-            - "{{ subnets.results[2].subnet.id }}"
+            - "{{ item.subnet }}"
           security_groups:
             - "{{ securitygroup.group_id }}"
         launch_type: "{{ ecs_launchtype }}"
         region: "{{ ec2_region }}"
         aws_access_key: "{{ aws_access_key }}"
         aws_secret_key: "{{ aws_secret_key }}"
+      loop:
+        - { id: 1, name: "{{ subnets.results[0].subnet.availability_zone }}", subnet: "{{ subnets.results[0].subnet.id }}" }
+        - { id: 2, name: "{{ subnets.results[1].subnet.availability_zone }}", subnet: "{{ subnets.results[1].subnet.id }}" }
+        - { id: 3, name: "{{ subnets.results[2].subnet.availability_zone }}", subnet: "{{ subnets.results[2].subnet.id }}" }
 
