--- a/.factory/aws/cluster/tasks/ecs/taskdefinition.yml
+++ b/.factory/aws/cluster/tasks/ecs/taskdefinition.yml
@@ -16,8 +16,12 @@
             portMappings:
               - containerPort: 8500
                 hostPort:      8500
+            environment:
+              - name: CONSUL_BIND_INTERFACE
+                value: eth0
+              - name: CONSUL_LOCAL_CONFIG
+                value: '{ "datacenter": "foo", "server": true, "encrypt": "zSni4XjggpO8jW2nofP9VA=="}'
         launch_type: "{{ ecs_launchtype }}"
-        revision: "{{ ecs_task_revision }}"
         cpu: "{{ ecs_task_cpu }}"
         memory: "{{ ecs_task_memory }}"
         state: present
