--- a/.factory/aws/cluster/tasks/ecs/taskdefinition.yml
+++ b/.factory/aws/cluster/tasks/ecs/taskdefinition.yml
@@ -20,7 +20,7 @@
               - name: CONSUL_BIND_INTERFACE
                 value: eth0
               - name: CONSUL_LOCAL_CONFIG
-                value: '{ "datacenter": "foo", "server": true, "encrypt": "zSni4XjggpO8jW2nofP9VA=="}'
+                value: '{ "datacenter": "foo", "server": true, "encrypt": "{{ consul_key }}"}'
         launch_type: "{{ ecs_launchtype }}"
         cpu: "{{ ecs_task_cpu }}"
         memory: "{{ ecs_task_memory }}"
