--- a/.factory/aws/cluster/tasks/ecs/service.yml
+++ b/.factory/aws/cluster/tasks/ecs/service.yml
@@ -15,7 +15,7 @@
         repeat: "{{ ecs_repeat }}"
         name: "{{ ec2_name_prefix }}-service-{{ item.name }}"
         cluster: "{{ ec2_name_prefix }}-cluster"
-        task_definition: "{{ ec2_name_prefix }}-taskdefinition:latest"
+        task_definition: "{{ ec2_name_prefix }}-taskdefinition"
         desired_count: "1"
         network_configuration:
           assign_public_ip: "{{ ecs_public_ip }}"
@@ -31,4 +31,3 @@
         - { id: 1, name: "{{ subnets.results[0].subnet.availability_zone }}", subnet: "{{ subnets.results[0].subnet.id }}" }
         - { id: 2, name: "{{ subnets.results[1].subnet.availability_zone }}", subnet: "{{ subnets.results[1].subnet.id }}" }
         - { id: 3, name: "{{ subnets.results[2].subnet.availability_zone }}", subnet: "{{ subnets.results[2].subnet.id }}" }
-
