--- a/.factory/aws/cluster/tasks/ec2/vpc.yml
+++ b/.factory/aws/cluster/tasks/ec2/vpc.yml
@@ -24,3 +24,15 @@
         aws_access_key: "{{ aws_access_key }}"
         aws_secret_key: "{{ aws_secret_key }}"
       register: igw
+
+#    - name: create a private zone
+#      route53_zone:
+#        zone: consul.local
+#        vpc_id: '{{ vpc.vpc.id }}'
+#        region: "{{ ec2_region }}"
+#        aws_access_key: "{{ aws_access_key }}"
+#        aws_secret_key: "{{ aws_secret_key }}"
+#        comment: "{{ ec2_name_prefix }}-zone"
+#      register: r53
+#
+#    - debug: msg="{{ r53 }}"
