--- a/.factory/aws/cluster/tasks/ecs/taskdefinition.yml
+++ b/.factory/aws/cluster/tasks/ecs/taskdefinition.yml
@@ -16,6 +16,14 @@
             portMappings:
               - containerPort: 8500
                 hostPort:      8500
+              - containerPort: 8600
+                hostPort:      8600
+              - containerPort: 8301
+                hostPort:      8301
+              - containerPort: 8302
+                hostPort:      8302
+              - containerPort: 8300
+                hostPort:      8300
             environment:
               - name: CONSUL_BIND_INTERFACE
                 value: eth0
