--- a/production.yml
+++ b/production.yml
@@ -5,6 +5,13 @@
   connection: local
 
   pre_tasks:
+
+    - name: Verify Ansible version.
+      assert:
+        that: "ansible_version.full is version_compare('2.7', '>=')"
+        msg: >
+          "You must update Ansible to at least 2.7 to run service discovery on AWS Fargate"
+
     - pause:
         prompt: "AWS ACCESS KEY required, please open README to store encrypted"
       register: aws_access_key_prompt
