--- a/.factory/aws/cluster/tasks/ecs/taskdefinition.yml
+++ b/.factory/aws/cluster/tasks/ecs/taskdefinition.yml
@@ -31,7 +31,7 @@
                 value: "{{ lookup('template','./template/docker_consul_local_config.json.j2')|to_json }}" # TODO: remove after bugfix https://github.com/ansible/ansible/issues/44897
         launch_type: "{{ ecs_launchtype }}"
         cpu: "{{ ecs_task_cpu }}"
-        memory: "{{ ecs_task_memory }}"
+        memory: '{{ ecs_task_memory }}'
         state: present
         network_mode: awsvpc
         region: "{{ ec2_region }}"
