--- a/production.yml
+++ b/production.yml
@@ -10,7 +10,7 @@
       assert:
         that: "ansible_version.full is version_compare('2.7', '>=')"
         msg: >
-          "You must update Ansible to at least 2.7 to run service discovery on AWS Fargate"
+          "You must update Ansible to at least 2.7 to support tagging on AWS Fargate"
 
     - pause:
         prompt: "AWS ACCESS KEY required, please open README to store encrypted"
