--- a/.factory/aws/cluster/tasks/ec2/vpc.yml
+++ b/.factory/aws/cluster/tasks/ec2/vpc.yml
@@ -6,7 +6,8 @@
 #
 ########################################################################################################################
 
-    - ec2_vpc_net:
+    - name: present VPC
+      ec2_vpc_net:
         name: "{{ ec2_name_prefix }}-vpc"
         cidr_block: "{{ ec2_vpc_cidr }}"
         tags:
@@ -17,7 +18,8 @@
         aws_secret_key: "{{ aws_secret_key }}"
       register: vpc
 
-    - ec2_vpc_igw:
+    - name: present network gateway
+      ec2_vpc_igw:
         vpc_id: "{{ vpc.vpc.id }}"
         state: present
         region: "{{ ec2_region }}"
