--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,5 @@ install:
   - pip install ansible-lint
 
 script:
-  - ansible-playbook --syntax-check *.yml
-  - ansible-lint -v *.yml
+  - make test
 
