travis environment variable test

--- a/deploy-testing.yml
+++ b/deploy-testing.yml
@@ -12,6 +12,9 @@
         aws_access_key: "{{ lookup('env', 'AWS_ACCESS_KEY') }}"
         aws_secret_key: "{{ lookup('env', 'AWS_SECRET_KEY') }}"
         consul_key: "{{ lookup('env', 'CONSUL_KEY') }}"
+        test_key: "{{ lookup('env', 'TEST123') }}"
+
+    - debug: msg="{{ test_key }}"
 
   roles:
    - { role: aws/cluster, tags: [ 'aws/cluster' ]}
