travis environment variable test

--- a/deploy-testing.yml
+++ b/deploy-testing.yml
@@ -7,7 +7,7 @@
   pre_tasks:
 
     - name: map environment variables
-      debug: msg="{{ lookup('env','AWS_ACCESS_KEY') }}"
+      debug: msg="{{ lookup('env','TEST123') }}"
       vars:
         aws_access_key: "{{ lookup('env', 'AWS_ACCESS_KEY') }}"
         aws_secret_key: "{{ lookup('env', 'AWS_SECRET_KEY') }}"
