--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 ---
 language: python
 python: "2.7"
+sudo: false
+
+env:
+  - BOTO_CONFIG="/dev/null"
 
 before_install:
   - sudo apt-get update -qq
