--- a/deploy-testing.yml
+++ b/deploy-testing.yml
@@ -12,12 +12,11 @@
         msg: >
           "You must update Ansible to at least 2.7 to support tagging on AWS Fargate"
 
-    - name: map environment variables "{{ lookup('env','TEST123') }}"
+    - name: map environment variables"
       set_fact:
         aws_access_key: "{{ lookup('env', 'AWS_ACCESS_KEY') }}"
         aws_secret_key: "{{ lookup('env', 'AWS_SECRET_KEY') }}"
         consul_key: "{{ lookup('env', 'CONSUL_KEY') }}"
-        test_key: "{{ lookup('env', 'TEST123') }} test"
 
     - debug: msg="{{ test_key }}"
 
