restructured state oriented setup

--- a/.factory/aws/cluster/defaults/main.yml
+++ b/.factory/aws/cluster/defaults/main.yml
@@ -1,3 +1,8 @@
+# Default state
+state: present
+
+# Default valid state
+state_present: present
 
 # Default group name
 ec2_name_prefix: foo-bar-consul
