--- a/.factory/aws/cluster/tasks/main.yml
+++ b/.factory/aws/cluster/tasks/main.yml
@@ -6,30 +6,4 @@
 #
 ########################################################################################################################
 
-# EC2 VPC
-
-      - include_tasks: ec2/vpc.yml
-
-# EC2 Subnets
-
-      - include_tasks: ec2/subnets.yml
-
-# EC2 Create Security Group
-
-      - include_tasks: ec2/securitygroup.yml
-
-# ECS Create Cluster
-
-      - include_tasks: ecs/cluster.yml
-
-# ECS Taskdefinition
-
-      - include_tasks: ecs/taskdefinition.yml
-
-# ECS Service
-
-      - include_tasks: ecs/service.yml
-
-# DNS
-
-      #- include_tasks: r53/map.yml
+      - include_tasks: "{{ state }}.yml"
