--- a/deploy-testing.yml
+++ b/deploy-testing.yml
@@ -17,8 +17,7 @@
         aws_access_key: "{{ lookup('env', 'AWS_ACCESS_KEY') }}"
         aws_secret_key: "{{ lookup('env', 'AWS_SECRET_KEY') }}"
         consul_key: "{{ lookup('env', 'CONSUL_KEY') }}"
-
-    - debug: msg="{{ test_key }}"
+      when: aws_access_key is not defined
 
   roles:
-   - { role: aws/cluster, tags: [ 'aws/cluster' ]}
+     - { role: aws/cluster, tags: [ 'aws/cluster' ]}
