--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-inventory = ./hosts
-roles_path = roles:.factory/
+inventory = .factory/hosts
+roles_path = roles:.factory/roles/
 retry_files_enabled = False
 vault_password_file=.aws_vault.txt
+library=.factory/library
