--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
 
       script:
         - echo "travis" > .aws_vault.txt
-        - sed -i '' "s/000000000000/$AWS_ACCOUNT/g" .travis/nuke-config.yml
+        - sed -i "s/000000000000/$AWS_ACCOUNT/g" .travis/nuke-config.yml
         - make testing
 
     - language: go
